we add a image and a history of gabriel garcia marquez

--- a/index.html
+++ b/index.html
@@ -3,9 +3,42 @@
 <head>
 	<meta charset="utf-8">
 	<title></title>
+	<link rel="stylesheet" type="text/css" href="index.css">
 </head>
-<body>
-	<h1>Hello Paul</h1>
+<main id="main">
+	<body>
+	 <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
+	 <h1 id="title"> Gabriel Garcia Marquez</h1>
+	 <p>colombian writer</p>
+	 <div id="img-div">
+	 	<img id="image" src="https://caracoltv.brightspotcdn.com/dims4/default/7bd9f4b/2147483647/strip/true/crop/1000x716+0+0/resize/1000x716!/quality/90/?url=https%3A%2F%2Fcaracol-brightspot.s3-us-west-2.amazonaws.com%2Fassets%2Fbluradio%2Fportada_gabo_afp.jpg">
+	 	<p id="img-caption">Gabriel García Márquez was a Colombian novelist, short-story writer, screenwriter, and journalist, known affectionately as Gabo or Gabito  throughout Latin America.</p>
+	 </div>
+	 <div id="tribute-info">
+	 	<h4> Gabriel Garcia info</h4>
+
+	 	<ul>
+	 		<li>Gabriel García Márquez was born on 6 March 1927[c] in Aracataca,Colombia</li>
+	 		<li>Gabriel García Márquez was born on 6 March 1927[c] in Aracataca,Colombia </li>
+	 		<li>Gabriel García Márquez was born on 6 March 1927[c] in Aracataca,Colombia</li>
+	 		<li>Gabriel García Márquez was born on 6 March 1927[c] in Aracataca,Colombia</li>
+	 	</ul>
+	 	<h3> to get more info of Gabriel Garcia Marquez <a target="_blank" id="tribute-link" href="https://en.wikipedia.org/wiki/Gabriel_Garc%C3%ADa_M%C3%A1rquez"> Click Me</h3>
+
+
+
+
+	 </div>
+		
+
+
+
+
+
+
+
+		
+	</main>
 
 </body>
 </html>
